bigger refactor: added app logic from console-lib for prep of commands etc move main.cpp to ShiftRegister.cpp and created app.cpp as main app bootstrap added dummy pin write commands cmake additions and rename of project to rpi-test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18.0)
-project(ShiftRegister VERSION 0.1.2 LANGUAGES CXX)
+project(rpi-test VERSION 0.1.2 LANGUAGES CXX)
 
 # Add The CPM Package Manager
 if(NOT EXISTS "${CMAKE_HOME_DIRECTORY}/cmake/CPM.cmake")
@@ -36,12 +36,18 @@ find_library(WIRINGPI_LIBRARIES
     )
 
 set(SOURCES_CXX_FILES
-    "src/main.cpp"
+    "src/app.cpp"
+    "src/ShiftRegister.cpp"
+    "commands/cmd_pin_write.cpp"
     # add your implemention files here..
 )
-set(HEADER "include/main.hpp")
+set(HEADERS
+    "include/app.hpp"
+    "include/ShiftRegister.hpp"
+    "include/cmd_pin_write.hpp"
+)
 
-add_executable(${PROJECT_NAME} ${SOURCES_CXX_FILES} ${HEADER})
+add_executable(${PROJECT_NAME} ${SOURCES_CXX_FILES} ${HEADERS})
 include_directories(${CMAKE_BINARY_DIR}/dist/include)
 target_link_libraries(${PROJECT_NAME} ${WIRINGPI_LIBRARIES})
 target_link_libraries(${PROJECT_NAME} console)
