--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/CliMenu"]
 	path = lib/CliMenu
 	url = git@github.com:TheNoviceProspect/CliMenu.git
+[submodule "lib/WiringPi"]
+	path = lib/WiringPi
+	url = https://github.com/WiringPi/WiringPi.git
