added a new view for a shiftregister test renamed MainWindow to MainWindowView for automatic discovery in avalonia app now starts in dark mode instead of light

--- a/RpiLED.Gui/RpiLed.Gui.csproj
+++ b/RpiLED.Gui/RpiLed.Gui.csproj
@@ -28,4 +28,15 @@
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.3" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.3" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RpiLED.Core\RpiLed.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\MainWindowView.axaml.cs">
+      <DependentUpon>MainWindowView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\ShiftRegisterView.axaml.cs">
+      <DependentUpon>ShiftRegisterView.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
